# MeowEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  GenerateMakefiles.sh  GenerateVisualStudioFiles.bat  LICENSE.txt  README.md  premake5.lua
Dependencies/GLAD/: CMakeLists.txt  premake5.lua
Dependencies/ImGui/: premake5.lua
Dependencies/stb_image/: CMakeLists.txt  stb_image.cpp
MeowApplication/: imgui.ini
MeowApplication/shaders/: animated_sprites.frag.glsl  animated_sprites.vert.glsl  frag.glsl  mouse_lighting.frag.glsl  mouse_lighting.vert.glsl  renderable2d.frag.glsl  renderable2d.vert.glsl  texture2d.frag.glsl  texture2d.vert.glsl  texture2d_defuse.frag.glsl  texture2d_defuse.vert.glsl  vert.glsl
MeowApplication/src/: Main.cpp  MeowApplication.cpp  MeowApplication.h
MeowEngine/: cpp.hint
MeowEngine/Includes/: Meow.h  MeowPCH.h
MeowEngine/src/: Meow.h  MeowPCH.cpp  Test.cpp  Test.h
docs/html/: _animated_sprite_8h_source.html  _animated_sprite_renderer_8h_source.html  _application_8h_source.html  _application_event_8h_source.html  _batch_renderer2_d_8h_source.html  _buffer_8h_source.html  _core_8h_source.html  _entry_point_8h_source.html  _event_8h_source.html  _file_8h_source.html  _frame_buffer_8h_source.html  _graphics_context_8h_source.html  _index_buffer_8h_source.html  _key_event_8h_source.html  _layer_8h_source.html  _layer_stack_8h_source.html  _log_8h_source.html  _maths_8h_source.html  _meow_8h_source.html  _meow_p_c_h_8h_source.html  _mouse_event_8h_source.html  _open_g_l_buffer_8h_source.html  _open_g_l_context_8h_source.html  _open_g_l_index_buffer_8h_source.html  (+154 more)
test/: premake5.lua
(+188 files in other folders)
